<resources>
    <string name="app_name">Marketim</string>
    <string name="app_title">MARKETİM</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="remember_me">Beni Hatırla</string>
    <string name="login">Giriş</string>
    <string name="enter_username">Lütfen kullanıcı adınızı girin.</string>
    <string name="enter_password">Lütfen şifrenizi girin.</string>
    <string name="wrong_username_or_password">Hatalı kullanıcı adı veya şifre.</string>
    <string name="my_orders">Siparişlerim</string>
    <string name="logout">Çıkış Yap</string>
    <string name="expand_collapse">Aç / Kapat</string>
    <string name="something_went_wrong">Bir şeyler ters gitti!</string>
    <string name="logout_dialog_message">Çıkmak istediğinize emin misiniz?</string>
</resources>
